--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.78",
+    "@mui/material": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.0.0-beta.5",
+    "material-table": "^1.63.0",
+    "material-ui-search-bar": "^1.0.0",
+    "moment": "^2.29.3",
+    "mssql": "^8.1.0",
     "react": "^18.0.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^4.3.1",
+    "react-moment": "^1.1.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.0"
   }
 }
